--- a/public/index.html
+++ b/public/index.html
@@ -14,10 +14,18 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
     <title>Phone template react</title>
+            <!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="/__/firebase/8.3.1/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+<script src="/__/firebase/8.3.1/firebase-analytics.js"></script>
+
+<!-- Initialize Firebase -->
+<script src="/__/firebase/init.js"></script>
   </head>
   <body>
-    <noscript></noscript>
     <div id="root"></div>
- 
+
   </body>
 </html>
